# PasswordsKeeper

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  dist-workspace.toml  justfile  pyproject.toml
.github/workflows/: docker-publish.yml  rust.yml  rust_bot.yml  rust_sec_store.yml
bot/: Cargo.toml
bot/src/: dialogues_controller.rs  handler.rs  lib.rs  main.rs  users.rs
bot/src/bot/: handlers.rs  interaction.rs  mod.rs  ttl.rs  whitelist.rs
bot/src/dialogues/: add_record.rs  commands.rs  create_repo.rs  edit_record.rs  hello.rs  mod.rs  open_repo.rs  restore.rs  view_record.rs  view_repo.rs  welcome.rs
bot/src/dialogues/repository/: create_repo.rs  mod.rs  open_repo.rs  view_repo.rs
bot/src/dialogues/repository/records/: add_record.rs  edit_record.rs  fields.rs  mod.rs  view_record.rs
bot/src/dialogues_controller/: handler.rs  mod.rs  teloxide.rs  ttl.rs
bot/src/reps_cms/: cms.rs  mod.rs
bot/src/reps_store/: store.rs
bot/src/stated_dialogues/: add_record.rs  common.rs  create_repo.rs  hello.rs  mod.rs  open_repo.rs  view_record.rs  view_repo.rs
bot/src/user_repo_factory/: file.rs  mod.rs
depricated/: .gitignore  Dockerfile
depricated/src/bot/: config.py
depricated/src/bot/dialogue/contexts/: base.py  commands.py  hello.py
depricated/src/bot/dialogue/contexts/repository/: edit_record.py  rep_view.py
depricated/src/dialog/: on_startup_shutdown.py
depricated/src/sec_store/: records_repository.py
depricated/tests/bot/: test_bot.py
depricated/tests/sec_store/: conftest.py  test_record.py
sec_store/: Cargo.toml
sec_store/src/: cipher.rs  file_repository.rs  lib.rs  main.rs  record.rs  repository.rs
sec_store/src/repository/: file.rs  mod.rs  remote.rs
sec_store_server/: Cargo.toml  README.md
sec_store_server/src/: lib.rs  main.rs
sec_store_server/src/api/: mod.rs  repositories.rs  sessions.rs
sec_store_server/tests/fixtures/certs/: ca.pem  client-identity.pem  server-key.pem  server.pem  untrusted-client-identity.pem
src/bot/: bot.py  common.py  exceptions.py  hashes_store.py  main.py  user_lock.py  user_reps.py
src/bot/dialogue/: user_dialog.py
src/bot/dialogue/contexts/: base.py  commands.py  common.py  hello.py  inititlize_rep.py  open_rep.py
src/bot/dialogue/contexts/repository/: add_record.py  edit_record.py  rep_view.py  view_record.py
src/bot/handlers/: __init__.py  base_handlers.py
src/dialog/: context.py  dialog.py  event_emitter.py  types.py
src/sec_store/: cipher.py  exceptions.py  key.py  record.py
stated_dialogues/: Cargo.toml
stated_dialogues/src/: lib.rs
stated_dialogues/src/controller/: handler.rs  mod.rs  teloxide.rs  ttl.rs
stated_dialogues/src/dialogues/: mod.rs
stated_dialogues/src/dialogues_controller/: mod.rs  teloxide.rs
tests/: test_first.py
tests/sec_store/: test_repository.py
tui/: Cargo.toml  README.md
tui/src/: app.rs  cli.rs  fields.rs  input.rs  lib.rs  main.rs  record_fields.rs  repo.rs  runtime.rs  test_helpers.rs
tui/src/dialogues/: add_record.rs  create_repo.rs  edit_record.rs  mod.rs  open_repo.rs  view_record.rs  view_repo.rs  welcome.rs
