[workspace]
members = ["bot", "sec_store", "sec_store_server", "stated_dialogues", "tui"]
resolver = "2"

[workspace.package]
edition = "2021"

version = "0.0.9"
license = "MIT"
homepage = "https://github.com/goDeni/PasswordsKeeper"
repository = "https://github.com/goDeni/PasswordsKeeper"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
