[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-mutex = "1.4.0"
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
sec_store = {path = "../sec_store"}
stated_dialogues = {path = "../stated_dialogues"}
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempdir = "0.3.7"
