[package]
name = "bot"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
async-mutex = "1.4.0"
async-trait = "0.1.83"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
sec_store = {path = "../sec_store"}
stated_dialogues = {path = "../stated_dialogues", features = ["teloxide-adapter-rustls", "teloxide-adapter-native-tls"]}
teloxide = { version = "0.13.0", features = ["macros"] }
tempdir = "0.3.7"
tempfile = "3.14.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempdir = "0.3.7"
