[package]
name = "bot"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
async-mutex = "1.4.0"
async-trait = "0.1.86"
dotenv = "0.15.0"
log = "0.4.26"
pretty_env_logger = "0.5.0"
sec_store = {path = "../sec_store"}
stated_dialogues = {path = "../stated_dialogues", features = ["teloxide-adapter-rustls", "teloxide-adapter-native-tls"]}
teloxide = { version = "0.13.0", features = ["macros"] }
tempfile = "3.17.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
