[package]
name = "sec_store"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.96"
ctr = "0.9.2"
md5 = "0.7.0"
rand = "0.9.0"
ring = "0.17.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tempfile = "3.17.1"
thiserror = "2.0.11"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
