[package]
name = "sec_store"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
ctr = "0.9.2"
md5 = "0.8.0"
rand = "0.9.2"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
