[package]
name = "sec_store"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
ctr = "0.9.2"
md5 = "0.8.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
