[package]
name = "stated_dialogues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
log = "0.4.20"
teloxide = { version = "0.12.2", features = ["macros"], optional = true }
tokio = { version = "1.35.1", features = ["macros", "sync", "time"] }

[features]
teloxide-adapter = ["dep:teloxide"]
